# multiversx-multisig-platform

./: .gitignore  README.md  package-lock.json  package.json
contract/: Cargo.toml  sc-config.toml
contract/meta/: Cargo.toml
contract/meta/src/: main.rs
contract/src/: action.rs  lib.rs  multisig_events.rs  multisig_perform.rs  multisig_propose.rs  multisig_state.rs  user_role.rs
contract/wasm/: Cargo.toml
contract/wasm/src/: lib.rs
docs/: api-reference.md  architecture.md  deployment.md  frontend-guide.md  smart-contract.md  user-guide.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActivityPanel.tsx  CircuitBackground.tsx  ComingSoonBanner.tsx  NetworkSelector.tsx  ProtectedRoute.tsx  R2Droid.tsx
frontend/src/components/Layout/: Footer.tsx  Layout.tsx  (+2 more)
frontend/src/config/: network.ts
frontend/src/contracts/: multisig.abi.json  multisigInteraction.ts
frontend/src/hooks/: useAddressBook.ts  useNotifications.ts
frontend/src/pages/: AddressBookPage.tsx  AnalyticsPage.tsx  CreatePage.tsx  DashboardPage.tsx  GovernancePage.tsx  HistoryPage.tsx  MultiChainPage.tsx  MultisigPage.tsx  NftTreasuryPage.tsx  PluginsPage.tsx  SettingsPage.tsx  SocialRecoveryPage.tsx  StakingPage.tsx  TwoFAPage.tsx  UnlockPage.tsx
frontend/src/test/: exportUtils.test.ts  formatters.test.ts  network.test.ts
frontend/src/utils/: exportUtils.ts  formatters.ts  proposalMeta.ts
scripts/: deploy-devnet.mjs
