[package]
name = "multiversx-multisig"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.54.6"

[dependencies.multiversx-sc-modules]
version = "0.54.6"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.6"

[dev-dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
